# hwcomponents-neurosim

./: .gitignore  Makefile  README.md  pyproject.toml  setup.py  setup_scm_version.py
.github/workflows/: publish.yaml
hwcomponents_neurosim/: __init__.py  default_config.cfg  main.py  neurointerface.py
