[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents-neurosim"
version = "0.1"
description = "A package for estimating the energy and area of NeuroSim components"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Tanner Andrulis", email = "andrulis@mit.edu"}
]
keywords = ["hardware", "energy", "estimation", "analog", "adc", "neurosim", "pim", "processing-in-memory", "cim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true
py-modules = ["hwcomponents_neurosim"]

[tool.setuptools.package-data]
hwcomponents_neurosim = [
    "cells/*",
    "NeuroSim/main",
    "default_config.cfg",
    "neurosim.model.yaml",
]
