[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "hwcomponents-neurosim"
dynamic = ["version"]
description = "A package for estimating the energy and area of NeuroSim components"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    {name = "Tanner Andrulis", email = "andrulis@mit.edu"}
]
keywords = ["hardware", "energy", "estimation", "analog", "adc", "neurosim", "pim", "processing-in-memory", "cim"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "hwcomponents",
]

[tool.setuptools]
packages = {find = {}}
include-package-data = true

[tool.setuptools.package-data]
hwcomponents_neurosim = [
    "cells/*",
    "NeuroSim/main",
    "default_config.cfg",
    "neurosim.model.yaml",
]

[tool.setuptools_scm]
write_to = "hwcomponents_neurosim/_version.py"
fallback_version = "1.0.0"
version_scheme = "setup_scm_version:post_version"
local_scheme = "setup_scm_version:no_local"
